@@ -28,7 +28,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 public class IdentityKeyStore implements org.whispersystems.libsignal.state.IdentityKeyStore {
 
@@ -165,7 +164,7 @@ public class IdentityKeyStore implements org.whispersystems.libsignal.state.Iden
                 .map(f -> resolver.resolveRecipient(Long.parseLong(f.getName())))
                 .filter(Objects::nonNull)
                 .map(this::loadIdentityLocked)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void mergeRecipients(final RecipientId recipientId, final RecipientId toBeMergedRecipientId) {
